--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -4,13 +4,13 @@
     </div>
     <div class="header-items">
         <div class="header-item">
-            <button>About Me</button>
+            <button><h3>About Me</h3></button>
         </div>
         <div class="header-item">
-            <button>Contact</button>
+            <button><h3>Cirriculum Vitae</h3></button>
         </div>
         <div class="header-item">
-            <button>Cirriculum Vitae</button>
+            <button><h3>Contact Me</h3></button>
         </div>
     </div>
 </div>
