--- a/src/app/components/content/content.component.scss
+++ b/src/app/components/content/content.component.scss
@@ -4,17 +4,19 @@
     width: 94.75vw;
     justify-content: center;
     // align-items: center;
-    background-image: url("../../../assets/background.webp");
+    // background-image: url("../../../assets/background.webp");
+    background-color: #181818;
+    border-radius: 1vh 0 0 0;
     .main-content {
         display: flex;
-        margin: 2vh 1vw;
+        margin: 2vh 3vw;
         .photo {
-            margin-top: 3.5vh;
+            margin-top: 8vh;
             margin-left: 1vh;
             margin-right: 1vh;
             img{
                 border-radius: 50%;
-                height: 25vh;
+                height: 22vh;
             }
         }
         .text {
