Removed Nav Bar and changed styling

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -4,13 +4,16 @@
     </div>
     <div class="header-items">
         <div class="header-item">
-            <button><h3>About Me</h3></button>
+            <a href="/"><h3>Projects and Skills</h3></a>
         </div>
         <div class="header-item">
-            <button><h3>Cirriculum Vitae</h3></button>
+            <a href="/"><h3>About Me</h3></a>
         </div>
         <div class="header-item">
-            <button><h3>Contact Me</h3></button>
+            <a href="/"><h3>Cirriculum Vitae</h3></a>
+        </div>
+        <div class="header-item">
+            <a href="/"><h3>Contact Me</h3></a>
         </div>
     </div>
 </div>
