--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <div class="container">
   <app-header></app-header>
   <div class="middle">
-    <app-nav-bar></app-nav-bar>
+    <!-- <app-nav-bar></app-nav-bar> -->
     <app-content></app-content>
   </div>
 </div>
