Started projects page

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,2 @@
-<div class="container">
-  <app-header></app-header>
-  <div class="middle">
-    <!-- <app-nav-bar></app-nav-bar> -->
-    <app-content></app-content>
-  </div>
-</div>
+<app-header></app-header>
+<router-outlet></router-outlet>
