--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,19 +1,19 @@
 <div class="header-container">
     <div class="logo">
-        <h1>KD</h1>
+        <a routerLink="/" routerLinkActive="active"><h1>KD</h1></a>
     </div>
     <div class="header-items">
         <div class="header-item">
-            <a href="/"><h3>Projects and Skills</h3></a>
+            <a routerLink="/projects" routerLinkActive="active"><h3>Projects and Skills</h3></a>
         </div>
         <div class="header-item">
-            <a href="/"><h3>About Me</h3></a>
+            <a><h3>About Me</h3></a>
         </div>
         <div class="header-item">
-            <a href="/"><h3>Cirriculum Vitae</h3></a>
+            <a><h3>Cirriculum Vitae</h3></a>
         </div>
         <div class="header-item">
-            <a href="/"><h3>Contact Me</h3></a>
+            <a><h3>Contact</h3></a>
         </div>
     </div>
 </div>
