--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -1,6 +1,7 @@
 .header-container {
     display: flex;
     height: 7.9vh;
+    width: 100vw;
     justify-content: space-between;
     background-color: black;
     border-bottom: 0.01vh solid white;
@@ -17,18 +18,6 @@
         flex-direction: row;
         justify-content: space-around;
         align-items: center;
-        a {
-            text-decoration: none;
-            color: white;
-            border: none;
-            background-color: black;
-            opacity: 0.6;
-            transition: 0.3s;
-        }
-
-        a:hover {
-            color: #FFFFFF;
-            opacity: 1;
-        }
+        gap: 2.5vw;
     }
 }
