--- a/src/app/components/projects/projects.component.scss
+++ b/src/app/components/projects/projects.component.scss
@@ -7,22 +7,64 @@
     background-color: #181818;
     .main-content {
         display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
+        flex-direction: row;
+        // align-items: center;
         margin: 2vh 3vw;
         border-radius: 2vh;
         background-color: black;
         padding: 1vh 1vw;
         opacity: 0.95;
-        .skills {
-            display: flex;
-            flex-direction: column;
-            height: 40vh;
-        }
         .projects {
             display: flex;
-            height: 40vh;
+            flex-direction: column;
+            align-items: center;
+            gap: 4vh;
+            .title {
+                display: flex;
+                justify-content: center;
+                align-items: center;
+            }
+            .projects-slideshow {
+                display: flex;
+                flex-direction: row;
+                justify-content: space-around;
+                align-items: center;
+                .arrow {
+                    display: flex;
+                    justify-content: center;
+                    align-items: center;
+                    width: 5vw;
+                }
+                .project {
+                    display: flex;
+                    flex-direction: column;
+                    width: 60vw;
+                    height: 60vh;
+                    justify-content: center;
+                    align-items: center;
+                    .proj-title {
+                        display: flex;
+                        height: 3vh;
+                        width: 60vw;
+                        justify-content: center;
+                        align-items: center;
+                    }
+                    .project-picture {
+                        display: flex;
+                        height: 55vh;
+                        width: 60vw;
+                        justify-content: center;
+                        align-items: center;
+                    }
+                }
+            }
+            .description {
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                height: 10vh;
+                width: 60vw;
+            }
         }
     }
 }
