--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -7,7 +7,7 @@
             <a routerLink="/projects" routerLinkActive="active"><h3>Projects and Skills</h3></a>
         </div>
         <div class="header-item">
-            <a><h3>About Me</h3></a>
+            <a routerLink="/about" routerLinkActive="active"><h3>About Me</h3></a>
         </div>
         <div class="header-item">
             <a><h3>Cirriculum Vitae</h3></a>
