Changed color scheme

--- a/src/app/components/about/about.component.html
+++ b/src/app/components/about/about.component.html
@@ -4,6 +4,27 @@
             <div class="title">
                 <h1>About Me</h1>
             </div>
+            <div class="about">
+                <h3>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce posuere lobortis tempus. Aliquam
+                    finibus metus felis, feugiat faucibus felis tristique vitae. Maecenas non nisi quis massa auctor
+                    commodo. Suspendisse tempor ac purus in suscipit. Vivamus sed facilisis risus. Suspendisse iaculis
+                    magna neque. <br><br> Cras in dolor fermentum tellus ultrices tincidunt sit amet at lorem. Etiam commodo,
+                    nunc et sagittis rutrum, elit enim feugiat tortor, at auctor sem nulla nec risus. Nam auctor diam
+                    quis eros lacinia, in finibus velit accumsan. Aenean a orci pretium, condimentum orci non, lobortis
+                    nulla. Donec ut mauris velit.
+
+                    <br><br><br> Nam a justo consequat metus accumsan suscipit ac in ante. Curabitur consectetur, sapien in commodo
+                    interdum, sapien sapien dictum turpis, non tempor odio orci viverra sem. Quisque sagittis magna
+                    vehicula mollis consequat. Aenean at ultricies leo. Ut volutpat dolor ut nulla dignissim feugiat.
+                    Integer molestie libero in ornare tempus. In facilisis non metus at volutpat. Quisque hendrerit,
+                    magna nec tincidunt ornare, nunc nunc ultricies nulla, eget tincidunt mi felis ac ipsum. Aenean
+                    fringilla nibh orci, in elementum ipsum bibendum sit amet.
+
+                    <br><br><br> Nunc tempus sem id mi suscipit efficitur. Vestibulum id lobortis sem, eu viverra erat. Pellentesque
+                    non molestie magna. Curabitur dui leo, dapibus quis risus sed, feugiat pulvinar.
+                </h3>
+            </div>
         </div>
     </div>
 </div>
