--- a/src/app/components/content/content.component.scss
+++ b/src/app/components/content/content.component.scss
@@ -6,9 +6,9 @@
     .main-content {
         display: flex;
         margin: 2vh 3vw;
-        border-radius: 2vh;
-        background-image: linear-gradient(65.9deg, rgba(85, 228, 224, 1) 5.5%, rgba(75, 68, 224, 0.74) 54.2%, rgba(64, 198, 238, 1) 55.2%, rgba(177, 36, 224, 1) 98.4%);
-        color: #FFF4E4;
+        border-top-left-radius: 5vh;
+        border-bottom-right-radius: 5vh;
+        background-color: #FFF4E4;
         box-shadow: 1px 10px 21px 0px rgba(84,84,84,0.74);
         -webkit-box-shadow: 1px 10px 21px 0px rgba(84,84,84,0.74);
         -moz-box-shadow: 1px 10px 21px 0px rgba(84,84,84,0.74);
