--- a/src/app/components/about/about.component.scss
+++ b/src/app/components/about/about.component.scss
@@ -7,20 +7,21 @@
         display: flex;
         flex-direction: row;
         margin: 2vh 3vw;
-        border-radius: 2vh;
+        border-top-left-radius: 5vh;
+        border-bottom-right-radius: 5vh;
         background-color: #FFF4E4;
-        // color: #2B303A;
-        color: #FFF4E4;
+        color: #2B303A;
         box-shadow: 1px 10px 21px 0px rgba(84,84,84,0.74);
         -webkit-box-shadow: 1px 10px 21px 0px rgba(84,84,84,0.74);
         -moz-box-shadow: 1px 10px 21px 0px rgba(84,84,84,0.74);
         padding: 1vh 1vw;
         opacity: 0.95;
-        background-image: linear-gradient(65.9deg, rgba(85, 228, 224, 1) 5.5%, rgba(75, 68, 224, 0.74) 54.2%, rgba(64, 198, 238, 1) 55.2%, rgba(177, 36, 224, 1) 98.4%);
         .about {
             display: flex;
             flex-direction: column;
             align-items: center;
+            width: 60vw;
+            margin: 2vh 2vw;
 
             .title {
                 display: flex;
