--- a/src/app/components/projects/projects.component.scss
+++ b/src/app/components/projects/projects.component.scss
@@ -3,15 +3,17 @@
     height: 92vh;
     width: 100vw;
     justify-content: center;
+
     .main-content {
         display: flex;
         flex-direction: row;
         margin: 2vh 3vw;
-        border-radius: 2vh;
-        background-image: linear-gradient(65.9deg, rgba(85, 228, 224, 1) 5.5%, rgba(75, 68, 224, 0.74) 54.2%, rgba(64, 198, 238, 1) 55.2%, rgba(177, 36, 224, 1) 98.4%);
-        box-shadow: 1px 10px 21px 0px rgba(84,84,84,0.74);
-        -webkit-box-shadow: 1px 10px 21px 0px rgba(84,84,84,0.74);
-        -moz-box-shadow: 1px 10px 21px 0px rgba(84,84,84,0.74);
+        border-top-left-radius: 5vh;
+        border-bottom-right-radius: 5vh;
+        background-color: #FFF4E4;
+        box-shadow: 1px 10px 21px 0px rgba(84, 84, 84, 0.74);
+        -webkit-box-shadow: 1px 10px 21px 0px rgba(84, 84, 84, 0.74);
+        -moz-box-shadow: 1px 10px 21px 0px rgba(84, 84, 84, 0.74);
         padding: 1vh 1vw;
         opacity: 0.95;
 
@@ -67,6 +69,9 @@
                             border-radius: 1%;
                             max-width: 100%;
                             max-height: 100%;
+                            box-shadow: 1px 10px 21px 0px rgba(84, 84, 84, 0.74);
+                            -webkit-box-shadow: 1px 10px 21px 0px rgba(84, 84, 84, 0.74);
+                            -moz-box-shadow: 1px 10px 21px 0px rgba(84, 84, 84, 0.74);
                         }
                     }
                 }
