All pages complete, finishing touches and responsiveness

--- a/src/app/components/about/about.component.html
+++ b/src/app/components/about/about.component.html
@@ -4,7 +4,7 @@
             <div class="title">
                 <h1>About Me</h1>
             </div>
-            <div class="about">
+            <div class="text">
                 <h3>
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce posuere lobortis tempus. Aliquam
                     finibus metus felis, feugiat faucibus felis tristique vitae. Maecenas non nisi quis massa auctor
