--- a/src/app/components/content/content.component.html
+++ b/src/app/components/content/content.component.html
@@ -19,16 +19,13 @@
             <div class="socials">
                 <ul>
                     <li>
-                        <fa-icon [icon]="faFacebook"></fa-icon> Facebook
+                        <a href="https://www.facebook.com/profile.php?id=100012638014200"><fa-icon [icon]="faFacebook"></fa-icon> Facebook</a>
                     </li>
                     <li>
-                        <fa-icon [icon]="faLinkedin"></fa-icon> LinkedIn
+                        <a href="https://www.linkedin.com/in/karl-doherty-084b37225"><fa-icon [icon]="faLinkedin"></fa-icon> LinkedIn</a>
                     </li>
                     <li>
-                        <fa-icon [icon]="faGithub"></fa-icon> Github
-                    </li>
-                    <li>
-                        <fa-icon [icon]="faInstagram"></fa-icon> Instagram
+                        <a href="https://github.com/k4rldoherty"><fa-icon [icon]="faGithub"></fa-icon> Github</a>
                     </li>
                 </ul>
             </div>
