--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -4,16 +4,16 @@
     </div>
     <div class="header-items">
         <div class="header-item">
-            <a routerLink="/projects" routerLinkActive="active"><h3>Projects and Skills</h3></a>
-        </div>
-        <div class="header-item">
             <a routerLink="/about" routerLinkActive="active"><h3>About Me</h3></a>
         </div>
         <div class="header-item">
-            <a><h3>Cirriculum Vitae</h3></a>
+            <a routerLink="/projects" routerLinkActive="active"><h3>Projects</h3></a>
         </div>
         <div class="header-item">
-            <a><h3>Contact</h3></a>
+            <a routerLink="/cv" routerLinkActive="active"><h3>Cirriculum Vitae</h3></a>
+        </div>
+        <div class="header-item">
+            <a  routerLink="/contact" routerLinkActive="active"><h3>Contact</h3></a>
         </div>
     </div>
 </div>
