--- a/src/app/components/content/content.component.scss
+++ b/src/app/components/content/content.component.scss
@@ -3,35 +3,49 @@
     height: 92vh;
     width: 100vw;
     justify-content: center;
+
     .main-content {
         display: flex;
         margin: 2vh 3vw;
         border-top-left-radius: 5vh;
         border-bottom-right-radius: 5vh;
         background-color: #FFF4E4;
-        box-shadow: 1px 10px 21px 0px rgba(84,84,84,0.74);
-        -webkit-box-shadow: 1px 10px 21px 0px rgba(84,84,84,0.74);
-        -moz-box-shadow: 1px 10px 21px 0px rgba(84,84,84,0.74);
+        box-shadow: 1px 10px 21px 0px rgba(84, 84, 84, 0.74);
+        -webkit-box-shadow: 1px 10px 21px 0px rgba(84, 84, 84, 0.74);
+        -moz-box-shadow: 1px 10px 21px 0px rgba(84, 84, 84, 0.74);
         padding: 1vh 1vw;
         opacity: 0.95;
+
         .photo {
             margin-top: 8vh;
             margin-left: 1vh;
             margin-right: 1vh;
+
             img {
                 border-radius: 50%;
                 height: 22vh;
                 opacity: 1;
             }
         }
+
         .text {
             display: flex;
             flex-direction: column;
             justify-content: space-around;
+            align-items: center;
             width: 50vw;
+            padding: 0 5vw;
             opacity: 1;
+            overflow: auto;
+
             .socials {
                 display: flex;
+
+                a {
+                    text-decoration: none;
+                    color: #2B303A;
+                    border: none;
+                }
             }
         }
     }
