--- a/src/app/components/projects/projects.component.scss
+++ b/src/app/components/projects/projects.component.scss
@@ -22,9 +22,11 @@
             flex-direction: column;
             align-items: center;
             gap: 4vh;
+            overflow: auto;
 
             .title {
                 display: flex;
+                overflow: auto;
                 justify-content: center;
                 align-items: center;
             }
@@ -84,6 +86,7 @@
                 text-align: center;
                 height: 10vh;
                 width: 60vw;
+                overflow: auto;
             }
         }
     }
