Centered Contact title

--- a/src/app/components/contact/contact.component.scss
+++ b/src/app/components/contact/contact.component.scss
@@ -25,6 +25,9 @@
             width: 60vw;
             height: 80vh;
             margin: 2vh 2vw;
+            .title {
+                text-align: center;
+            }
 
             .form {
                 display: flex;
@@ -40,7 +43,7 @@
                     input {
                         height: 3vh;
                         width: 25vh;
-                        border-radius: 0.25vh;
+                        border-radius: 0.75vh;
                         box-shadow: 1px 10px 21px 0px rgba(84, 84, 84, 0.74);
                         -webkit-box-shadow: 1px 10px 21px 0px rgba(84, 84, 84, 0.74);
                         -moz-box-shadow: 1px 10px 21px 0px rgba(84, 84, 84, 0.74);
@@ -50,13 +53,13 @@
                     textarea {
                         height: 20vh;
                         width: 30vw;
-                        max-height: 40vh;
+                        max-height: 35vh;
                         max-width: 40vw;
                         box-shadow: 1px 10px 21px 0px rgba(84, 84, 84, 0.74);
                         -webkit-box-shadow: 1px 10px 21px 0px rgba(84, 84, 84, 0.74);
                         -moz-box-shadow: 1px 10px 21px 0px rgba(84, 84, 84, 0.74);
                         border: none;
-                        border-radius: 0.25vh;
+                        border-radius: 0.75vh;
                     }
 
                     button {
