Added content to about page and more styling

--- a/src/app/components/about/about.component.html
+++ b/src/app/components/about/about.component.html
@@ -2,28 +2,32 @@
     <div class="main-content">
         <div class="about">
             <div class="title">
+                <div class="picture">
+                    <img src="../../../assets/pic.jpeg" alt="Me">
+                </div>
                 <h1>About Me</h1>
             </div>
             <div class="text">
-                <h3>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce posuere lobortis tempus. Aliquam
-                    finibus metus felis, feugiat faucibus felis tristique vitae. Maecenas non nisi quis massa auctor
-                    commodo. Suspendisse tempor ac purus in suscipit. Vivamus sed facilisis risus. Suspendisse iaculis
-                    magna neque. <br><br> Cras in dolor fermentum tellus ultrices tincidunt sit amet at lorem. Etiam commodo,
-                    nunc et sagittis rutrum, elit enim feugiat tortor, at auctor sem nulla nec risus. Nam auctor diam
-                    quis eros lacinia, in finibus velit accumsan. Aenean a orci pretium, condimentum orci non, lobortis
-                    nulla. Donec ut mauris velit.
-
-                    <br><br><br> Nam a justo consequat metus accumsan suscipit ac in ante. Curabitur consectetur, sapien in commodo
-                    interdum, sapien sapien dictum turpis, non tempor odio orci viverra sem. Quisque sagittis magna
-                    vehicula mollis consequat. Aenean at ultricies leo. Ut volutpat dolor ut nulla dignissim feugiat.
-                    Integer molestie libero in ornare tempus. In facilisis non metus at volutpat. Quisque hendrerit,
-                    magna nec tincidunt ornare, nunc nunc ultricies nulla, eget tincidunt mi felis ac ipsum. Aenean
-                    fringilla nibh orci, in elementum ipsum bibendum sit amet.
-
-                    <br><br><br> Nunc tempus sem id mi suscipit efficitur. Vestibulum id lobortis sem, eu viverra erat. Pellentesque
-                    non molestie magna. Curabitur dui leo, dapibus quis risus sed, feugiat pulvinar.
-                </h3>
+                <h2>My name is Karl</h2>
+                <h5>I am an enthusiastic, self motivated and charismatic individual.</h5>
+                <p>I am from Donegal, currently living in Dublin. I am a final year student in Dublin City University
+                    studying Computer Science.<br> I have been interested in software and technology since a young age,
+                    which started off with gaming
+                    and
+                    eventually leading me to wonder about how the games I played were made. <br>
+                    I have learned many different languages and technologies both in college and outside college in my
+                    own
+                    time, and enjoy taking on personal projects in my spare time which help broaden my knowledge on
+                    topics I
+                    may not have been familiar with previously. <br>
+                    I have experience working on a development team thanks to my five month internship with IRLCA Ltd,
+                    where
+                    I worked on a web application helping to digitize the pharmaceutical testing industry, and this has
+                    helped me gain crucial knowledge about how a development team operates, how to work in an agile
+                    environment with regular standups, scrum meetings and deadlines. <br>
+                    Aside from programming, I am an active person and enjoy going to the gym, as well as kickboxing and
+                    Jiu Jitsu.
+                </p>
             </div>
         </div>
     </div>
