--- a/src/app/components/projects/projects.component.html
+++ b/src/app/components/projects/projects.component.html
@@ -30,7 +30,7 @@
                 </div>
             </div>
             <div class="description">
-                <h4>{{ projectsList[projectIndex].description }}</h4>
+                {{ projectsList[projectIndex].description }}
             </div>
         </div>
     </div>
