--- a/src/app/components/about/about.component.scss
+++ b/src/app/components/about/about.component.scss
@@ -26,8 +26,14 @@
 
             .title {
                 display: flex;
+                flex-direction: column;
                 justify-content: center;
                 align-items: center;
+                img {
+                    height: 15vh;
+                    width: 9vw;
+                    border-radius: 50%;
+                }
             }
 
             .text {
