--- a/src/app/components/content/content.component.html
+++ b/src/app/components/content/content.component.html
@@ -4,28 +4,32 @@
             <img src="../../../assets/pic.jpeg" alt="Me">
         </div>
         <div class="text">
-            <h3>
-                <h2>Hi! My name is Karl, and I am a software developer from Donegal, Ireland.</h2><br><br>
-                I love all aspects of development, but I especially love front end and web design.<br>
-                I am currently a student in my final year of Computer Applications and Software Engineering (CASE) in
-                Dublin City University, and I hope to graduate in 2023. <br><br>
+            <h2>Hi! My name is Karl, and I am a software developer from Donegal, Ireland.</h2>
+            <h3>I love developing software and challenging myself!</h3>
+            <p>I am currently a student in my final year of Computer Applications and Software Engineering (CASE) in
+                Dublin City University, and I hope to graduate in 2023. <br>
                 This is my first personal webpage and I am excited to improve and update it regularly as a display of my
-                abilities as well as a portfolio for potential employers.<br><br>
+                abilities as well as a portfolio for potential employers.<br>
                 If you'd like to find out more about me and how I became interested in software development, click the
-                'About me' section at the top of the page. <br><br>
+                'About me' section at the top of the page. <br>
                 If you don't want to mess around, a quick link to some of my socials can be found below!<br><br>
-                Happy Browsing :)
-            </h3>
+                Happy Browsing :)</p> 
             <div class="socials">
                 <ul>
                     <li>
-                        <a href="https://www.facebook.com/profile.php?id=100012638014200"><fa-icon [icon]="faFacebook"></fa-icon> Facebook</a>
+                        <a href="https://www.facebook.com/profile.php?id=100012638014200">
+                            <fa-icon [icon]="faFacebook"></fa-icon> Facebook
+                        </a>
                     </li>
                     <li>
-                        <a href="https://www.linkedin.com/in/karl-doherty-084b37225"><fa-icon [icon]="faLinkedin"></fa-icon> LinkedIn</a>
+                        <a href="https://www.linkedin.com/in/karl-doherty-084b37225">
+                            <fa-icon [icon]="faLinkedin"></fa-icon> LinkedIn
+                        </a>
                     </li>
                     <li>
-                        <a href="https://github.com/k4rldoherty"><fa-icon [icon]="faGithub"></fa-icon> Github</a>
+                        <a href="https://github.com/k4rldoherty">
+                            <fa-icon [icon]="faGithub"></fa-icon> Github
+                        </a>
                     </li>
                 </ul>
             </div>
