Added route highlighting

--- a/src/app/components/about/about.component.html
+++ b/src/app/components/about/about.component.html
@@ -9,7 +9,7 @@
             </div>
             <div class="text">
                 <h2>My name is Karl</h2>
-                <h5>I am an enthusiastic, self motivated and charismatic individual.</h5>
+                <h5>An enthusiastic, self motivated and charismatic individual.</h5>
                 <p>I am from Donegal, currently living in Dublin. I am a final year student in Dublin City University
                     studying Computer Science.<br> I have been interested in software and technology since a young age,
                     which started off with gaming
