--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,8 +1,11 @@
 <div class="header-container">
     <div class="logo">
-        <a routerLink="/" routerLinkActive="active"><h1>KD</h1></a>
+        <h1>KD</h1>
     </div>
     <div class="header-items">
+        <div class="header-item">
+            <a routerLink="/home" routerLinkActive="active"><h3>Home</h3></a>
+        </div>
         <div class="header-item">
             <a routerLink="/about" routerLinkActive="active"><h3>About Me</h3></a>
         </div>
