Added route highlighting

--- a/src/app/components/contact/contact.component.scss
+++ b/src/app/components/contact/contact.component.scss
@@ -41,16 +41,14 @@
                     width: 40vw;
                     display: flex;
                     flex-direction: column;
-                    padding-left: 1vw;
+                    padding-left: 0.5vw;
+                    padding-bottom: 0.5vh;
                     overflow: auto;
 
                     input {
                         height: 3vh;
                         width: 25vh;
                         border-radius: 0.75vh;
-                        // box-shadow: 1px 10px 21px 0px rgba(84, 84, 84, 0.74);
-                        // -webkit-box-shadow: 1px 10px 21px 0px rgba(84, 84, 84, 0.74);
-                        // -moz-box-shadow: 1px 10px 21px 0px rgba(84, 84, 84, 0.74);
                         border: none;
                     }
 
@@ -59,9 +57,6 @@
                         width: 30vw;
                         max-height: 35vh;
                         max-width: 40vw;
-                        // box-shadow: 1px 10px 21px 0px rgba(84, 84, 84, 0.74);
-                        // -webkit-box-shadow: 1px 10px 21px 0px rgba(84, 84, 84, 0.74);
-                        // -moz-box-shadow: 1px 10px 21px 0px rgba(84, 84, 84, 0.74);
                         border: none;
                         border-radius: 0.75vh;
                     }
