--- a/src/app/components/contact/contact.component.html
+++ b/src/app/components/contact/contact.component.html
@@ -12,7 +12,7 @@
                             placeholder="Enter email" formControlName="Email">
                     </div>
                     <div class="form-group">
-                        <label for="fullname"><h4>Full Name</h4></label>
+                        <label for="fullname"><h4>Name</h4></label>
                         <input type="text" class="form-control" name="Fullname" placeholder="Full Name" formControlName="Fullname">
                     </div>
                     <div class="form-group">
